# liquidnotes

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
examples/: probe_capture.rs
shaders/: glass.hlsl
src/: lib.rs  main.rs  material.rs  scale.rs  store.rs  text.rs
src/gpu/: capture.rs  compositor.rs  device.rs  glass.rs  mod.rs
